[package]
name = "xkit"
version = "0.1.0"
authors = ["<xtutu0202@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
chrono = "0.4"
lazy_static = "1.4"
log = "0.4"
log4rs = "0.11"
byteorder = "1"
walkdir = "2"
